syntax = "proto3";

package billing_client;

option java_multiple_files = true;
option java_package = "com.zoroxnekko.patientservice.grpc";
option java_outer_classname = "BillingServiceProto";

service BillingService {
  rpc CreateBillingAccount(BillingRequest) returns (BillingResponse);
}

message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}
